--- a/styles.css
+++ b/styles.css
@@ -6,23 +6,50 @@ html {
 }
 
 /* Estilos generales */
-
+:root {
+    --color-primario: #000123;
+    --color-texto-header: #FF0F7B;
+    --color-texto-parrafos: #FFF;
+    --clr-neon: hsl(317 100% 54%);
+    --clr-bg: hsl(323 21% 16%);
+}
 * {
-    font-family: Outfit;
+    font-family: Orbitron;
     margin: 0;
     padding: 0;
+}
+.logo {
+    font-size: 28px;
+}
+.seccion {
+    padding: 48px 20px;
+    height: 100vh;
+    width: 100vw;
+}
+footer {
+    background-color: #020202;
+    color: #f2f2f2;
+    padding: 10px 20px;
+    text-align: center;
+}
+h1 {
+    color: var(--color-texto-header);
 }
 
 header {
     --bg-image: url(img/equipo-videojuegos-futurista-iluminado-ia-generativa-discoteca.jpg);
     --bg-image-brightness: 50%;
 
-    background-color: #000123;
     position: relative;
-    display: flex;
-    justify-content: center;
     isolation: isolate;
 
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    grid-template-rows: 100px 1fr;
+    grid-template-areas:
+    "header header"
+    "sidebar main"
+    "sidebar main";
 }
 header::before {
     content: '';
@@ -37,64 +64,133 @@ header::before {
 
     /* box-shadow: inset 0px -10px 10px -10px rgba(0, 1, 35 , 0.2), 0px -10px 10px -10px rgba(0, 1, 35 , 0.4);  */
 }
+header nav {
+    grid-area: header;
+    display: flex;
+    justify-content: center;
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+            display: inline;
+
+            a {
+                color: #fff;
+                text-decoration: none;
+                font-size: 2rem;
+                margin-left: 1.5rem;
+            }
+        }
+    }
+}
+
+
+header .header-content {
+    grid-area: sidebar;
+
+    h1 {
+        font-size: clamp(2.5rem, 3.5vw, 5rem);
+        color: var(--color-texto-header);
+    }
+    p {
+        font-size: clamp(1.5rem, 6.5vw, 5.5rem);
+        color: var(--color-texto-parrafos);
+        margin-top: 2rem;
+    }
+}
+
+
 svg {
     position: absolute;
     bottom: 0;
-    border-bottom: 3px solid #000123;
+    left: 0;
+    border-bottom: 3px solid var(--color-primario);
 }
-
-
-.logo {
-    font-size: 28px;
-}
-
-header nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-header nav ul li {
-    display: inline
-}
-
-header nav ul li a {
-    color: #fff;
-    text-decoration: none;
+.neon-button {
     font-size: 2rem;
-    margin-left: 1rem;
-}
+    width: 4rem;
+    height: 2rem;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--clr-neon);
+    border: var(--clr-neon) 0.125em solid;
+    padding: 0.25em 1em;
+    border-radius: 0.25em;
+  
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+  
+    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+  
+    position: relative;
+  }
+  
+  .neon-button::before {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    background: var(--clr-neon);
+    top: 120%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1em);
+    opacity: 0.7;
+  }
+  
+  .neon-button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 2em 0.5em var(--clr-neon);
+    opacity: 0;
+    background-color: var(--clr-neon);
+    z-index: -1;
+    transition: opacity 100ms linear;
+  }
+  
+  .neon-button:hover,
+  .neon-button:focus {
+    color: var(--clr-bg);
+    text-shadow: none;
+  }
+  
+  .neon-button:hover::before,
+  .neon-button:focus::before {
+    opacity: 1;
+  }
+  .neon-button:hover::after,
+  .neon-button:focus::after {
+    opacity: 1;
+  }
 
-.seccion {
-    padding: 48px 20px;
-    height: 100vh;
-    width: 100vw;
-}
+/* FIN DE ESTILOS DEL INICIO */
 
-footer {
-    background-color: #020202;
-    color: #f2f2f2;
-    padding: 10px 20px;
-    text-align: center;
-}
+
 
 /* Estilos específicos */
 
 #contenido {
-    background-color: rgb(0, 1, 35);
+    background-color: var(--color-primario);
 }
 
 #nosotros {
-    background-color: #000123;
+    background-color: var(--color-primario);
 }
 
 #contacto {
-    background-color: #000123;
+    background-color: var(--color-primario);
 }
 
-h1 {
-    color: #FF0F7B;
-}
+
 
 
   
