--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,16 @@ html {
     padding: 15px 20px;
 }
 footer {
-    background-color: #020202;
-    color: #f2f2f2;
-    padding: 10px 20px;
-    text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+        width: 100%;
+        padding: 2em;
+        background-color: #151414;
+        bottom: 0;
+    
 }
 h1 {
     color: var(--color-texto-header);
