--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,53 @@ body {
 
 }
 
+
+/*---------------------------- SECTIONS ----------------------------*/
+
+
+#inicio {
+  background-color: var(--color-primario);
+}
+
+#contenido {
+  background-color: var(--color-primario);
+}
+
+#nosotros {
+  background-color: var(--color-primario);
+  font-family: outfit;
+}
+
+#contacto {
+  background-color: var(--color-primario);
+  font-family: outfit;
+}
+
+#inicio h1 {
+  color: #f2f2f2;
+  font-family: outfit;
+
+}
+
+#contenido h1 {
+  color: #f2f2f2;
+  font-family: outfit;
+}
+
+#contacto h1 {
+  color: #f2f2f2;
+  font-family: outfit;
+  text-align: center;
+}
+
+section {
+  width: 100%;
+  padding: 20px 0;
+  box-sizing: border-box;
+  min-height: 100vh;
+}
+
+
 /*---------------------------- HEADER ----------------------------*/
 header {
   background-color: rgba(0, 0, 0, 0);
@@ -73,86 +120,7 @@ header nav ul li a {
 
 
 
-
-
-
-
-
-
-
-/*---------------------------- SECTIONS ----------------------------*/
-
-
-#inicio {
-  background-color: var(--color-primario);
-}
-
-#contenido {
-  background-color: var(--color-primario);
-}
-
-#nosotros {
-  background-color: var(--color-primario);
-  font-family: outfit;
-}
-
-#contacto {
-  background-color: var(--color-primario);
-  font-family: outfit;
-}
-
-#inicio h1 {
-  color: #f2f2f2;
-  font-family: outfit;
-
-}
-
-#contenido h1 {
-  color: #f2f2f2;
-  font-family: outfit;
-}
-
-#contacto h1 {
-  color: #f2f2f2;
-  font-family: outfit;
-  text-align: center;
-}
-
-section {
-  width: 100%;
-  padding: 20px 0;
-  box-sizing: border-box;
-  min-height: 100vh;
-}
-
 /*---------------------------- INICIO ----------------------------*/
-
-.home-info {
-  margin-bottom: 20px;
-}
-
-.neon-button {
-  text-decoration: none;
-  color: white;
-  background-color: var(--clr-neon);
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.neon-button:hover {
-  background-color: var(--clr-bg);
-}
-
-.home-text p {
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
-
-}
-
-
-
 #inicio {
   background-image: url('https://res.cloudinary.com/dkojgz9s6/image/upload/v1715800847/CodoACodoNJS/background_regenerado_en7lye.jpg');
   background-size: cover;
@@ -170,20 +138,26 @@ section {
   grid-row: 2;
   padding: 20px;
 }
-
-.home-info {
-  grid-column: 3;
-  grid-row: 3;
-  text-align: center;
-  place-items: center;
+.home-text p {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
 }
+
+
 
 /*---------------------------- Botón Neon ----------------------------*/
 
 .neon-button {
+  grid-column: 3;
+  grid-row: 3;
+  justify-self: center;
+  place-items: center;
+
+
   font-size: 1.4em;
   width: 9.2em;
-  height: 2em;
+  height: 1.1em;
   padding: 0.25em 0.5em;
   cursor: pointer;
   border-radius: 10px;
