--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html {
   scroll-behavior: smooth;
-
 }
 
 body {
@@ -244,9 +243,171 @@ header nav ul li a:hover {
 /*---------------------------- CONTENIDO ----------------------------*/
 
 
-/* slider stefan */
+/* ESTILOS JUEGOS */
+#contenido {
+  max-height: 1200px;
+}
+.centrar{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.imgsGeneros {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.iconos{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  width: 80%;
+  max-width: 400px;
+  padding: 10px;
+}
+/* PADRE */
+
+.slider {
+  display: flex;
+  position: relative;
+  max-width: 1200px;
+  padding: 20px;
+  height: 800px;
+  overflow: hidden;
+  color: var(--color-texto-parrafos);
+  background-color: var(--color-primario);
+  border-radius: 15px;
+  border: 2px solid var(--color-neon) ; 
+  font-family: Outfit;
+}
+
+/* Hijos */
+
+.slides {
+  display: flex;
+  /* justify-content: center; */
+  transition: transform 0.5s ease-in-out;;
+  width: 100%;
+  /* flex-wrap: nowrap; */
+}
+
+.slide {
+  min-width: 100%;
+  /* width: 100%; */
+  box-sizing: border-box;
+  flex-shrink: 0;
+  overflow: hidden; 
+  padding: 20px;    
+}
+
+.slide .info {
+  width: 80%;
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+.info h2 , .info p{
+  color: var(--color-textos);
+}
 
 
+.slide img {
+  width: 100%;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.titulosRel{
+  padding-top: 6%;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: var(--color-acento);
+  font-weight: bold;
+  font-size: 18px;
+  transition: background-color 0.6s ease;
+  border-radius: 15%; 
+  user-select: none;
+  background-color: var(--color-primario);
+  
+}
+
+.next {
+  right: 0;
+  /* border-radius: 3px 0 0 3px; */
+}
+
+.prev {
+  left:0;
+}
+.prev:hover, .next:hover {
+  background-color: var(--color-neon);
+}
+
+.logosJuegos{
+  max-height: 125px;
+
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .slider {
+      height: auto;
+      padding: 10px;
+      max-width: 550px;
+  }
+  .slide {
+      padding: 10px;
+      max-width: 500px;
+  }
+  .iconos {
+      width: 100%;
+      max-width: 300px;
+  }
+  .prev, .next {
+      font-size: 14px;
+      padding: 12px;
+  }
+}
+
+
+
+@media (max-width: 480px) {
+  .slider {
+      height: auto;
+      padding: 5px;
+      max-width: 350;
+  }
+  .slide {
+      padding: 5px;
+      max-width: 400px;
+  }
+  .iconos {
+      width: 100%;
+      max-width: 200px;
+      gap: 5px;
+  }
+  .prev, .next {
+      font-size: 12px;
+      padding: 8px;
+  }
+}
+
+
+
+/* FIN ESTILOS JUEGOS */
 
 /*---------------------------- NOSOTROS ----------------------------*/
 
