--- a/styles.css
+++ b/styles.css
@@ -256,11 +256,15 @@ header nav ul li a:hover {
 }
 
 .slide {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: none;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.slide.active {
+  display: flex;
 }
 
 .slide h2 {
@@ -277,6 +281,7 @@ header nav ul li a:hover {
   width: 80%;
   color: var(--color-textos);
   font-family: outfit;
+  font-size: larger;
 }
 
 .main-img {
